--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,10 +20,10 @@
     --tg-theme-text-color: #f5f5f5;
 
     /* @nuxt/ui */
-    --ui-primary: var(--tg-theme-accent-text-color);
-    --ui-bg: var(--tg-theme-bg-color);
-    --ui-bg-accented: var(--tg-theme-bg-color);
-    --ui-border-accented: var(--tg-theme-secondary-bg-color);
+    --ui-primary: var(--color-app-primary);
+    --ui-bg: var(--color-app-bg);
+    --ui-bg-accented: var(--color-app-bg-accented);
+    --ui-border-accented: var(--color-app-border-accented);
 }
 
 @theme {
@@ -41,5 +41,10 @@
     --color-tg-section-header-text: var(--tg-theme-section-header-text-color);
     --color-tg-section-separator: var(--tg-theme-section-separator-color);
     --color-tg-subtitle-text: var(--tg-theme-subtitle-text-color);
-    --color-app-bg: var(--app-bg-color);
+
+    --color-app-bg: #0d1721;
+    --color-app-bg-accented: #17212b;
+    --color-app-border-accented: #232e3c;
+    --color-app-primary: #e7c380;
+    --color-app-subtitle: #708499;
 }
