add luggage number step and contact methods choice

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,7 @@
     --color-app-border-accented: #232e3c;
     --color-app-primary: #e7c380;
     --color-app-subtitle: #708499;
+    --color-app-text: #f5f5f5;
 }
 
 *::-webkit-scrollbar {
