--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@
     --ui-bg: var(--color-app-bg-accented);
     --ui-bg-accented: var(--color-app-bg-accented);
     --ui-border-accented: var(--color-app-border-accented);
+    --ui-text-highlighted: var(--color-app-text);
 }
 
 @theme {
